--- a/jitpack/pom.xml
+++ b/jitpack/pom.xml
@@ -7,11 +7,20 @@
     <version>1.0-SNAPSHOT</version>
     <name>jitpack</name>
     <url>http://maven.apache.org</url>
+
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
+
+
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>3.8.1</version>
+            <version>4.12</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
