--- a/jitpack/pom.xml
+++ b/jitpack/pom.xml
@@ -15,13 +15,17 @@
         </repository>
     </repositories>
 
-
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.colinbut</groupId>
+            <artifactId>multigraph</artifactId>
+            <version>v1.0</version>
         </dependency>
     </dependencies>
 </project>
