--- a/junit-5/pom.xml
+++ b/junit-5/pom.xml
@@ -20,5 +20,11 @@
       <version>5.0.0-M1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.junit.platform</groupId>
+      <artifactId>junit-platform-runner</artifactId>
+      <version>1.0.0-M1</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
